# gtest-example

./: .travis.yml  CMakeLists.txt  Test.cc  facPrime.cc  facPrime.h  factorial.cc  factorial.h  prime.cc  prime.h  testFactorialAndPrime.cc
.github/workflows/: ccpp.yml  clang.yml
